[package]
authors = ["Brian Smith <brian@briansmith.org>"]
build = "build.rs"
categories = ["cryptography", "no-std"]
description = "Safe, fast, small crypto using Rust."
documentation = "https://briansmith.org/rustdoc/ring/"
edition = "2018"
keywords = ["crypto", "cryptography", "rand", "ECC", "RSA"]
license-file = "LICENSE"
name = "ring"
readme = "doc/link-to-readme.md"
repository = "https://github.com/briansmith/ring"
version = "0.16.20"

# Prevent multiple versions of *ring* from being linked into the same program.
links = "ring-asm"

[lib]
name = "ring"
crate-type = ["cdylib"]
